Fix post image overflow

--- a/_sass/themes/tnh/_blog-post.scss
+++ b/_sass/themes/tnh/_blog-post.scss
@@ -75,6 +75,10 @@
       cursor: pointer;
     }
 
+    img {
+      max-width: 100%;
+    }
+
     strong {
       color: $post-strong-color;
     }
